View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030494 | Open CASCADE | OCCT:Coding | public | 2019-02-12 09:40 | 2019-03-05 13:46 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030494: Coding Rules - eliminate declaration of OpenGl_Workspace::IsCullingEnabled() | ||||
Description | OpenGl_Workspace::IsCullingEnabled() method implementation has been removed within 0030434, but declaration still exists. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30494 has been created by kgv. SHA-1: c95939568c933d1138455706587b67f6ce6acbe8 Detailed log of new commits: Author: kgv Date: Tue Feb 12 09:37:30 2019 +0300 0030494: Coding Rules - eliminate declaration of OpenGl_Workspace::IsCullingEnabled() |
|
Please raise the patch. |
|
Combination - OCCT branch : CR30494 master SHA - c95939568c933d1138455706587b67f6ce6acbe8 7ed8668e4e52fbba7c47e571bf59f3e92b405869 Products branch : master SHA - 958a4e5e4b816adb6dba1a223ae557d1649e52b6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences |
|
Branch CR30494 has been deleted by kgv. SHA-1: c95939568c933d1138455706587b67f6ce6acbe8 |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-02-12 09:40 | kgv | New Issue | |
2019-02-12 09:40 | kgv | Assigned To | => kgv |
2019-02-12 09:40 | kgv | Relationship added | child of 0030434 |
2019-02-12 09:40 | kgv | Description Updated | |
2019-02-12 09:43 | git | Note Added: 0082144 | |
2019-02-12 12:52 | kgv | Note Added: 0082150 | |
2019-02-12 12:52 | kgv | Assigned To | kgv => bugmaster |
2019-02-12 12:52 | kgv | Status | new => resolved |
2019-02-12 12:52 | kgv | Status | resolved => reviewed |
2019-02-12 18:28 | apn | Test case number | => Not needed |
2019-02-12 18:28 | apn | Note Added: 0082160 | |
2019-02-12 18:28 | apn | Status | reviewed => tested |
2019-02-16 11:48 | apn | Changeset attached | => occt master 597fde68 |
2019-02-16 11:48 | apn | Assigned To | bugmaster => apn |
2019-02-16 11:48 | apn | Status | tested => verified |
2019-02-16 11:48 | apn | Resolution | open => fixed |
2019-03-05 13:46 | git | Note Added: 0082644 |