0030494: Coding Rules - eliminate declaration of OpenGl_Workspace::IsCullingEnabled()